@@ -1,3 +1,8 @@
+2007-08-08  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valasemanticanalyzer.vala: don't crash on missing type arguments,
+	  fixes bug 464699
+
 2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
 
 	* vapi/glib-2.0.vala: fix spelling of OptionFlags.FILENAME
